# gestorbeta1.0

./: .dockerignore  .env.example  .gitignore  .replit  ANÁLISE_ZIP_APLICAÇÃO.md  CHANGELOG_CORREÇÃO_RENOVACAO_18082025.md  CHANGELOG_CORREÇÕES_17082025.md  CHANGELOG_FINAL_18082025.md  CHANGELOG_HORARIOS_PERSONALIZADOS_19082025.md  CHANGELOG_MARQUES_FINAL.md  CLIENT_REGISTRATION_FIX.md  COMPATIBILIDADE_HORARIOS_19082025.md  CONFIGURAR_RAILWAY_REPLIT_HIBRIDO.md  CORREÇÃO-REPROCESSAMENTO-VENCIDOS.md  CORREÇÃO_AGENDAMENTO_IMPLEMENTADA.md  CORREÇÃO_CRÍTICA_CALLBACK_TEMPLATES_18082025.md  CORREÇÃO_CRÍTICA_ISOLAMENTO_TEMPLATES_18082025.md  CORREÇÃO_DEFINITIVA_SESSÕES_WHATSAPP_19082025.md  CORREÇÃO_EXCLUSÃO_TEMPLATES_18082025.md  CORREÇÃO_FINAL_CALLBACK_TEMPLATE_18082025.md  CORREÇÃO_FINAL_ISOLAMENTO_TEMPLATES_18082025.md  CORREÇÃO_HORÁRIOS_19082025.md  CORREÇÃO_STATUS_API_BAILEYS_18082025.md  CORREÇÃO_TEMPLATES_FILTRO_19082025.md  CORREÇÕES_APLICADAS_18082025_INSPEÇÃO.md  CORREÇÕES_CACHE_18082025.md  CORREÇÕES_ISOLAMENTO_ALERTAS_DIARIOS_18082025.md  CORREÇÕES_ISOLAMENTO_WHATSAPP_17082025.md  CORREÇÕES_MULTI_SESSAO_WHATSAPP_17082025.md  CORREÇÕES_MULTI_TENANT_APLICADAS.md  CORREÇÕES_PERSISTENCIA_QR_18082025.md  CORREÇÕES_QR_CODE_17082025.md  CORREÇÕES_RENOVAÇÃO_17082025.md  CORREÇÕES_SEGURANÇA_2025-08-17.md  CORREÇÕES_TEMPLATES_SCHEDULER_18082025.md  DEPLOY_GUIDE.md  DEPLOY_RAILWAY_INSTRUÇÕES.md  Dockerfile  Dockerfile (2).railway  Dockerfile.railway  (+74 more)
baileys-server/: README.md  package-lock.json  server.js  server.js.js
baileys-server/auth_info/: pre-key-10.json  pre-key-2.json  (+14 more)
(+103 files in other folders)
