[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==20.7",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
